--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY . .
 
 RUN npm ci
 
-ENV VITE_BACKEND_URL=http://localhost:3000
+ENV VITE_BACKEND_URL=http://localhost:8080/api
 
 RUN npm run build
 
@@ -14,12 +14,4 @@ FROM nginx:1.25-alpine AS release
 
 COPY --from=setup-stage /usr/src/app/dist /usr/share/nginx/html
 
-FROM setup-stage AS testing
-
-WORKDIR /usr/src/app
-
-COPY --from=setup-stage /usr/src/app /usr/src/app
-
-RUN npm install
-
-RUN npm test
+CMD [ "nginx", "-g", "daemon off;" ]
