--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -1,14 +1,21 @@
 services:
-  server:
-    image: todo-backend-v1
+  app-frontend:
+    image: todo-frontend-prod
     build:
-      context: .
-      dockerfile: dev.Dockerfile
+      context: ./todo-frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./todo-frontend:/usr/src/app
+    working_dir: /usr/src/app
+
+  app-backend:
+    image: todo-backend-prod
+    build:
+      context: ./todo-backend
+      dockerfile: Dockerfile
     depends_on:
       - mongo
       - redis
-    ports:
-       -  3000:3000
     environment:
       - REDIS_URL=redis://@redis:6379
       - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
@@ -22,7 +29,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
       MONGO_INITDB_DATABASE: the_database
     volumes:
-      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
     command: --quiet
 
@@ -32,6 +39,17 @@ services:
       - 6379:6379
     volumes:
       - redis_data:/data
+
+  nginx:
+    image: nginx:1.20.1
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf/:ro
+    ports:
+      - 8080:80
+    container_name: reverse-proxy
+    depends_on:
+      - app-frontend
+      - app-backend
 
 volumes:
   mongo_data:
