--- a/wiki-heist/nginx.dev.conf
+++ b/wiki-heist/nginx.dev.conf
@@ -6,11 +6,11 @@ http {
 
 
     location / {
+      # No real need for these because no db/websocket connections.
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       
-      # Requests are directed to http://localhost:5173
       proxy_pass http://wiki-frontend-dev:5173;
     }
 
